tests/snapshots/type_resolver__type_resolver@31_valid_function_calls.lang-2.snap
---
source: tests/type_resolver.rs
expression: hir
input_file: tests/type_resolver/31_valid_function_calls.lang
---
funs:
  add:
    ty:
      params:
        - - a
          - kind: Num
        - - b
          - kind: Num
      returns:
        kind: Num
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Add
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
  check:
    ty:
      params:
        - - x
          - kind: Num
      returns:
        kind: Bool
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Greater
          lhs:
            kind: Var
            name: x
          rhs:
            kind: Num
            value: 0
  compute:
    ty:
      params:
        - - a
          - kind: Num
        - - b
          - kind: Num
      returns:
        kind: Num
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Add
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
  do_something:
    ty:
      params: []
      returns:
        kind: Void
    body:
      - kind: Let
        name: x
        ty:
          kind: Num
        expr:
          kind: Num
          value: 1
      - kind: Return
        expr: ~
  get_number:
    ty:
      params: []
      returns:
        kind: Num
    body:
      - kind: Return
        expr:
          kind: Num
          value: 42
  increment:
    ty:
      params:
        - - x
          - kind: Num
      returns:
        kind: Num
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Add
          lhs:
            kind: Var
            name: x
          rhs:
            kind: Num
            value: 1
  is_valid:
    ty:
      params:
        - - x
          - kind: Num
      returns:
        kind: Bool
    body:
      - kind: Return
        expr:
          kind: Binary
          op: And
          lhs:
            kind: Binary
            op: GreaterEq
            lhs:
              kind: Var
              name: x
            rhs:
              kind: Num
              value: 0
          rhs:
            kind: Binary
            op: LesserEq
            lhs:
              kind: Var
              name: x
            rhs:
              kind: Num
              value: 100
  main:
    ty:
      params: []
      returns:
        kind: Void
    body:
      - kind: Call
        name: simple
        args: []
      - kind: Call
        name: with_args
        args:
          - kind: Num
            value: 42
          - kind: Bool
            value: true
      - kind: Let
        name: x
        ty:
          kind: Num
        expr:
          kind: Call
          name: get_number
          args: []
      - kind: Let
        name: y
        ty:
          kind: Bool
        expr:
          kind: Call
          name: check
          args:
            - kind: Num
              value: 10
      - kind: Let
        name: z
        ty:
          kind: Num
        expr:
          kind: Call
          name: add
          args:
            - kind: Num
              value: 5
            - kind: Num
              value: 3
      - kind: Call
        name: process
        args:
          - kind: Var
            name: x
      - kind: If
        cond:
          kind: Call
          name: is_valid
          args:
            - kind: Var
              name: x
        body:
          - kind: Call
            name: do_something
            args: []
        else: ~
      - kind: Loop
        body:
          - kind: If
            cond:
              kind: Unary
              op: Not
              expr:
                kind: Call
                name: should_continue
                args:
                  - kind: Var
                    name: y
            body:
              - kind: Break
            else: ~
          - kind: Call
            name: update
            args:
              - kind: Var
                name: x
          - kind: Assign
            name: x
            expr:
              kind: Call
              name: increment
              args:
                - kind: Var
                  name: x
      - kind: Let
        name: result
        ty:
          kind: Num
        expr:
          kind: Call
          name: compute
          args:
            - kind: Call
              name: add
              args:
                - kind: Num
                  value: 1
                - kind: Num
                  value: 2
            - kind: Call
              name: multiply
              args:
                - kind: Num
                  value: 3
                - kind: Num
                  value: 4
      - kind: Return
        expr: ~
  multiply:
    ty:
      params:
        - - a
          - kind: Num
        - - b
          - kind: Num
      returns:
        kind: Num
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Mul
          lhs:
            kind: Var
            name: a
          rhs:
            kind: Var
            name: b
  process:
    ty:
      params:
        - - x
          - kind: Num
      returns:
        kind: Void
    body:
      - kind: Let
        name: temp
        ty:
          kind: Num
        expr:
          kind: Var
          name: x
      - kind: Return
        expr: ~
  should_continue:
    ty:
      params:
        - - flag
          - kind: Bool
      returns:
        kind: Bool
    body:
      - kind: Return
        expr:
          kind: Binary
          op: Or
          lhs:
            kind: Var
            name: flag
          rhs:
            kind: Bool
            value: false
  simple:
    ty:
      params: []
      returns:
        kind: Void
    body:
      - kind: Return
        expr: ~
  update:
    ty:
      params:
        - - x
          - kind: Num
      returns:
        kind: Void
    body:
      - kind: Let
        name: y
        ty:
          kind: Num
        expr:
          kind: Binary
          op: Add
          lhs:
            kind: Var
            name: x
          rhs:
            kind: Num
            value: 1
      - kind: Return
        expr: ~
  with_args:
    ty:
      params:
        - - a
          - kind: Num
        - - b
          - kind: Bool
      returns:
        kind: Void
    body:
      - kind: Return
        expr: ~
